add Uncle Bob's clean architecture for Mpesa Ratiba APIs. The code structure is fully testable and highly scallable
